# PythonCppAPI

./: CMakeLists.txt  GeneratePythonCppAPIConfig.cmake  PythonCppAPIConfig.cmake.in  PythonCppAPIInstallConfig.cmake.in  PythonCppApiAutoPyObjectPtr.h  PythonCppApiCallFunction.cxx  PythonCppApiCallFunction.h  PythonCppApiInterpreter.cxx  PythonCppApiInterpreter.h  PythonCppApiUtility.cxx  PythonCppApiUtility.h  PythonCppApiVariant.cxx  PythonCppApiVariant.h  PythonCxx.cxx  PythonCxx.h  README.md  UsePythonCppAPI.cmake.in  Variant.cxx  Variant.h
Testing/: CMakeLists.txt  PythonCppApiTest.cxx  PythonCxxTest.cxx  hello.py  pythonEmbed.h:1  test.py
